// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectHeaderThemeList /> should render correctly 1`] = `
Array [
  <a
    className="sc-bdvvtL cAlSLs ProjectHeaderThemeList__ThemesButton-hsKMqV iWEtxc p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      className="sc-bdvvtL sc-eJwWfJ elfRAM jsDA-DM cap-icon"
      fill="none"
      viewBox="0 0 12 10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M11 3.182c0-.402-.344-.727-.77-.727h-5L4.309 1.29A.785.785 0 003.692 1H1.77C1.344 1 1 1.326 1 1.727v6.546c0 .401.344.727.77.727h8.46c.426 0 .77-.326.77-.727V3.182z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bdvvtL iWabdg cap-text platform__body"
      title="Immobilier "
    >
      Immobilier
       
      and-count-other-themes {"count":3}
    </p>
  </a>,
  <div
    aria-label="theme_list"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="theme-modal"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ProjectHeaderThemeList /> should render correctly when project is archived 1`] = `
Array [
  <a
    className="sc-bdvvtL cAlSLs ProjectHeaderThemeList__ThemesButton-hsKMqV fOWBro p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      className="sc-bdvvtL sc-eJwWfJ elfRAM jsDA-DM cap-icon"
      fill="none"
      viewBox="0 0 12 10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M11 3.182c0-.402-.344-.727-.77-.727h-5L4.309 1.29A.785.785 0 003.692 1H1.77C1.344 1 1 1.326 1 1.727v6.546c0 .401.344.727.77.727h8.46c.426 0 .77-.326.77-.727V3.182z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bdvvtL iWabdg cap-text platform__body"
      title="Immobilier "
    >
      Immobilier
       
      and-count-other-themes {"count":3}
    </p>
  </a>,
  <div
    aria-label="theme_list"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="theme-modal"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ProjectHeaderThemeList /> should render correctly with the display of modal 1`] = `
Array [
  <a
    className="sc-bdvvtL cAlSLs ProjectHeaderThemeList__ThemesButton-hsKMqV iWEtxc p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      className="sc-bdvvtL sc-eJwWfJ elfRAM jsDA-DM cap-icon"
      fill="none"
      viewBox="0 0 12 10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M11 3.182c0-.402-.344-.727-.77-.727h-5L4.309 1.29A.785.785 0 003.692 1H1.77C1.344 1 1 1.326 1 1.727v6.546c0 .401.344.727.77.727h8.46c.426 0 .77-.326.77-.727V3.182z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bdvvtL iWabdg cap-text platform__body"
      title="Immobilier "
    >
      Immobilier
       
      and-count-other-themes {"count":3}
    </p>
  </a>,
  <div
    aria-label="theme_list"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="theme-modal"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="sc-bdvvtL bSKXj sc-GEbAx cap-modal__overlay"
      onClick={[Function]}
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <div
        className="sc-bdvvtL hnbcdn sc-gsNilK cap-modal"
        style={
          Object {
            "opacity": 0,
            "transform": "translateY(-20px) translateZ(0)",
          }
        }
      >
        <header
          className="sc-bdvvtL jfdhIH cap-modal__header"
        >
          <div
            className="sc-bdvvtL hEjsJA"
          >
            count-themes {"count":4}
          </div>
          <button
            className="sc-bdvvtL bFJghn"
            onClick={[Function]}
          >
            <svg
              className="sc-bdvvtL sc-eJwWfJ ewVhss kiGavP cap-icon"
              fill="none"
              viewBox="0 0 12 12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 11L11 1M1 1l10 10"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={0.8}
              />
            </svg>
          </button>
        </header>
        <main
          className="sc-bdvvtL vunmq cap-modal__footer"
        >
          <ul
            className="ListGroupFlush__Container-eGshRq kTxvA-D list-group-flush list-group"
            striped={false}
          >
            <li
              className="list-group-item"
            >
              <a
                href="https://capco.dev/themes/immobilier?_locale=fr-FR"
              >
                Immobilier
              </a>
            </li>
            <li
              className="list-group-item"
            >
              <a
                href="https://capco.dev/themes/justice?_locale=fr-FR"
              >
                Justice
              </a>
            </li>
            <li
              className="list-group-item"
            >
              <a
                href="https://capco.dev/themes/transport?_locale=fr-FR"
              >
                Transport
              </a>
            </li>
            <li
              className="list-group-item"
            >
              <a
                href="https://capco.dev/themes/theme-vide?_locale=fr-FR"
              >
                Thème vide
              </a>
            </li>
          </ul>
        </main>
        <footer
          className="sc-bdvvtL eAeyKU cap-modal__footer"
        >
          <button
            className="sc-bdvvtL sc-lcepkR cUZrgi elkPgU cap-button"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
            type="button"
          >
            global.close
          </button>
        </footer>
      </div>
    </div>
  </div>,
]
`;
